added express server as well as added scripts taht will start the server and build webpack

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <!-- The 'defer' attribute will ensure that it is run only after the DOM finishes loading -->
   <script src="./bundle.js" defer></script>
   <title>Boilermaker</title>
+  <link rel="stylesheet" href="style.css" />
+
 </head>
 
 <body>
